--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Alchemists Web Tracker</title>
   <link rel="stylesheet" href="main.css" type="text/css" media="screen">
 </head>
