log setup to use bubbles

--- a/index.html
+++ b/index.html
@@ -421,8 +421,19 @@
     <h3>Log</h3>
     <ul id="log__list">
       <li type="test" ing1="root" ing2="foot" result="blueminus">
-       <span class="root">Root</span> + <span class="foot">Foot</span> =
-        <div class="bubble potion-blueminus"></div>
+       <div class="bubble element mushroom"></div> +
+       <div class="bubble element root"></div> =
+       <div class="bubble potion-blueminus"></div>
+      </li>
+      <li type="test" ing1="root" ing2="foot" result="blueminus">
+       <div class="bubble element feather"></div> +
+       <div class="bubble element root"></div> =
+       <div class="bubble potion-greenminus"></div>
+      </li>
+      <li type="test" ing1="root" ing2="foot" result="blueminus">
+       <div class="bubble element foot"></div> +
+       <div class="bubble element flower"></div> =
+       <div class="bubble potion-redplus"></div>
       </li>
     </ul>
   </div>
