--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     </div>
   </div>
   <div id="log">
-    <h3>Log</h3>
+    <h3>Log<button id="log__edit">edit</button></h3>
     <ul id="log__list">
 
     </ul>
