checking for big/little works. fixed deletion bug

--- a/index.html
+++ b/index.html
@@ -399,21 +399,21 @@
       </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type8 mushroom redplus greenplus blueplus all-large">
+      <div class="answer-grid__answer type8 mushroom redplus greenplus blueplus redbig greenbig bluebig">
       </div>
-      <div class="answer-grid__answer type8 fern redplus greenplus blueplus all-large">
+      <div class="answer-grid__answer type8 fern redplus greenplus blueplus redbig greenbig bluebig">
       </div>
-      <div class="answer-grid__answer type8 toad redplus greenplus blueplus all-large">
+      <div class="answer-grid__answer type8 toad redplus greenplus blueplus redbig greenbig bluebig">
       </div>
-      <div class="answer-grid__answer type8 foot redplus greenplus blueplus all-large">
+      <div class="answer-grid__answer type8 foot redplus greenplus blueplus redbig greenbig bluebig">
       </div>
-      <div class="answer-grid__answer type8 flower redplus greenplus blueplus all-large">
+      <div class="answer-grid__answer type8 flower redplus greenplus blueplus redbig greenbig bluebig">
       </div>
-      <div class="answer-grid__answer type8 root redplus greenplus blueplus all-large">
+      <div class="answer-grid__answer type8 root redplus greenplus blueplus redbig greenbig bluebig">
       </div>
-      <div class="answer-grid__answer type8 scorpion redplus greenplus blueplus all-large">
+      <div class="answer-grid__answer type8 scorpion redplus greenplus blueplus redbig greenbig bluebig">
       </div>
-      <div class="answer-grid__answer type8 feather redplus greenplus blueplus all-large">
+      <div class="answer-grid__answer type8 feather redplus greenplus blueplus redbig greenbig bluebig">
       </div>
     </div>
   </div>
