added about section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
   <link rel="stylesheet" href="main.css" type="text/css" media="screen">
 </head>
 <body id="index">
+  <div class="about">
+    <h3><a id="what">What is this?</a></h3>
+    <div class="about__content">
+      <p>
+        It’s a book-keeping tool for <a href="https://boardgamegeek.com/boardgame/161970/alchemists">the board game Alchemists, by Czech Games Edition.</a> It’s designed to reduce errors and assist in the logic involved in playing.
+      </p>
+      <h3>So I can use this instead of the Alchemists app?</h3>
+      <p>
+        Unfortunately, no. This page knows nothing about the inner workings of the game. To use it, you will need to switch between the app and this page.
+      </p>
+      <h3>Is this cheating?</h3>
+      <p>
+        Some people might see it as such. Do me a favor and don’t use this app without other players knowing you’re using it. But there’s nothing inherently unfair about this tool: if you are meticulous at record-keeping and a good logician, you could do everything this page does by hand.
+      </p>
+      <h3>How did you make this?</h3>
+      <p>
+         Using <a href="http://jquery.com/">JQuery</a> and <a href="http://sass-lang.com/">Sass.</a>
+      </p>
+      <h3>Hey, I found a bug!</h3>
+      <p>
+        Oops. The best way to let me know would be in an issue on <a href="https://github.com/Ayolland/alchemists-logger">the project’s Github page.</a> But otherwise you can <a href="mailto:andrew.yolland@gmail.com?Subject=Alchemists%20Logger%20Bug">send me an email</a>.
+      </p>
+    </div>
+  </div>
   <div id="controls" class="controls">
     <form class="control-group" id="test_potion">
       <h3 class="control-group__title">drink / test</h3>
