added my twitter

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
       </p>
       <h3>Hey, I found a bug!</h3>
       <p>
-        Oops. The best way to let me know would be in an issue on <a href="https://github.com/Ayolland/alchemists-logger">the project’s Github page.</a> But otherwise you can <a href="mailto:andrew.yolland@gmail.com?Subject=Alchemists%20Logger%20Bug">send me an email</a>.
+        Oops. The best way to let me know would be in an issue on <a href="https://github.com/Ayolland/alchemists-logger">the project’s Github page.</a> But otherwise you can <a href="mailto:andrew.yolland@gmail.com?Subject=Alchemists%20Logger%20Bug">send me an email.</a><br>
       </p>
+      <h3>If you use this app at all, feel free to tweet at me: <a href="https://twitter.com/AYolland">@ayolland</a>!</h3>
     </div>
   </div>
   <div id="controls" class="controls">
